--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "axios": "^0.27.2",
     "babel-plugin-module-resolver": "^4.1.0",
+    "classnames": "^2.3.1",
     "customize-cra": "^1.0.0",
+    "normalize.css": "^8.0.1",
     "react": "^18.1.0",
     "react-app-rewired": "^2.2.1",
     "react-dom": "^18.1.0",
