--- a/package.json
+++ b/package.json
@@ -23,14 +23,10 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "sass": "^1.52.1",
-<<<<<<< HEAD
-    "web-vitals": "^2.1.0",
-    "yup": "^0.32.11"
-=======
+    "yup": "^0.32.11",
     "socket.io-client": "^4.5.1",
     "sockjs-client": "^1.6.1",
     "web-vitals": "^2.1.0"
->>>>>>> ddb92cb (feature:bookEffect)
   },
   "scripts": {
     "start": "react-app-rewired start",
