--- a/package.json
+++ b/package.json
@@ -14,14 +14,17 @@
     "babel-plugin-module-resolver": "^4.1.0",
     "classnames": "^2.3.1",
     "customize-cra": "^1.0.0",
+    "formik": "^2.2.9",
     "normalize.css": "^8.0.1",
     "react": "^18.1.0",
     "react-app-rewired": "^2.2.1",
     "react-dom": "^18.1.0",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "sass": "^1.52.1",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-app-rewired start",
