--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-plugin-module-resolver": "^4.1.0",
     "classnames": "^2.3.1",
     "customize-cra": "^1.0.0",
+    "dotenv": "^16.0.1",
     "formik": "^2.2.9",
     "normalize.css": "^8.0.1",
     "react": "^18.1.0",
@@ -23,10 +24,10 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "sass": "^1.52.1",
-    "yup": "^0.32.11",
     "socket.io-client": "^4.5.1",
     "sockjs-client": "^1.6.1",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-app-rewired start",
